--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mark Bryan | Fullstack Web Developer</title>
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
     <div id="home">
       <p id="text-header">Mark Bryan De Guzman</p>
       <p id="text-content">A Glimpse to a Full Stack Web Developer</p>
-      <img src="/assets/mbdg.jpg" alt="mbdg">
+      <img src="assets/mbdg.jpg" alt="mbdg">
       <p class="text-desc">I'm a Filipino Web Developer focused in web applications, and electronics. Studying data
         science and learning Machine Learning, I've encountered several problems with different solutions with varying
         quirks. Currently focused on business solutions, I'm seeing different problems that needs quirky solutions.</p>
@@ -38,7 +38,7 @@
           <p class="text-header">Zumumu</p>
           <hr>
           <a class="li-anchor" href="https://www.zumumu.com" target="_blank"><img class="li-logo"
-              src="/assets/zumumu.png" alt="Zumumu"></a>
+              src="assets/zumumu.png" alt="Zumumu"></a>
           <p class="text-content">Different from the typical ordering system, Zumumu utilizes QR codes for ordering and
             providing quality service. Zumumu is an ordering system that has multiple applications like web ordering,
             waiter app, self-ordering and Point of Sales.</p>
@@ -46,7 +46,7 @@
         <li>
           <p class="text-header">Pudding</p>
           <hr>
-          <a class="li-anchor" href="https://pudding.ws" target="_blank"><img src="/assets/pudding.svg" alt="pudding"
+          <a class="li-anchor" href="https://pudding.ws" target="_blank"><img src="assets/pudding.svg" alt="pudding"
               class="li-logo"></a>
           <p class="text-content"><i>Pudding! I'm here!</i> Pudding is a technology that literally says that I am here.
             It utilizes QR code to know whether your employee is here at the exact time. This technology priorities
@@ -55,7 +55,7 @@
         <li>
           <p class="text-header">LuksLofts</p>
           <hr>
-          <a class="li-anchor" href="https://lukslofts.com" target="_blank"><img src="/assets/lukslofts.svg"
+          <a class="li-anchor" href="https://lukslofts.com" target="_blank"><img src="assets/lukslofts.svg"
               alt="LuksLofts" class="li-logo" id="lukslofts_logo"></a>
           <p class="text-content">LuksLofts hotel is a Five Star hotel located at Batangas City, Batangas. It boast the
             futuristic technology and innovative room controls and services. LuksLofts uses face recognition system for
@@ -66,7 +66,7 @@
         <li>
           <p class="text-header">DigiButler</p>
           <hr>
-          <a class="li-anchor" href="https://digibutler.net" target="_blank"><img src="/assets/digibutler.gif"
+          <a class="li-anchor" href="https://digibutler.net" target="_blank"><img src="assets/digibutler.gif"
               alt="DigiButler" class="li-logo" id="digibutler_logo"></a>
           <p class="text-content">DigiButler your digital butler! DigiButler is a PMS system that provides quality
             services your personal butler can provide. DigiButler provides room control, entertainment and ordering.
